--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> YAYYYYYY now FT me!
+          YAYYYYYY now FT me!
         </p>
       </div>
     </div>
